--- a/rustflare/Cargo.toml
+++ b/rustflare/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "rustflare"
-version = "0.1.0"
-edition = "2021"
+edition.workspace = true
+version.workspace = true
+authors.workspace = true
+description.workspace = true
 
 [dependencies]
 dioxus = { workspace = true, optional = true }
@@ -11,3 +13,4 @@ yew = { workspace = true, optional = true }
 default = []
 yew = ["dep:yew"]
 dioxus = ["dep:dioxus"]
+mutually_exclusive = ["dioxus", "yew"]
